# fafsa-engine

./: .gitignore  CODEX_WORKPAD.md  DEPLOY.md  README.md  app.py  demo.py  pyproject.toml
.github/workflows/: local-validation.yml
data/: README.md
docs/architecture/: architecture-findings.json  index.html  linear-issue-candidates.md  report-2026-05-12.html
docs/overnight/: tensor-fafsa-engine-architecture-map.md  tensor-fafsa-engine-dependency-surface.md  tensor-fafsa-engine-docs-claims.md  tensor-fafsa-engine-risk-register.md  tensor-fafsa-engine-validation-map.md  tensor-fafsa-engine-workflow-handoff.md
docs/overnight/2026-05-07-30min-extension/: tensor-fafsa-engine-action-plan.md
docs/overnight/2026-05-07-30min-extension-b/: tensor-fafsa-engine-validation-queue-plan.md
docs/overnight/2026-05-07-whole-portfolio-review/: tensor-fafsa-engine-implementation-readiness.md  tensor-fafsa-engine-risk-and-validation-review.md
examples/: __init__.py  counterfactual.py
fafsa/: __init__.py  isir.py  kb.py  validate.py  wizard.py
llm/: __init__.py  base.py  claude_backend.py  mlx_backend.py  ollama_backend.py  openai_backend.py
medicaid/: kb.py
runs/tensor-fafsa-optional-llm-imports/: handoff.md  result.json
tests/: __init__.py  test_cli_smoke.py  test_fafsa_kb.py  test_isir_validation.py  test_llm_backends.py  test_runtime_output_defaults.py
