[project]
name = "fafsa-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "requests",
]

[project.optional-dependencies]
claude = ["anthropic"]
openai = ["openai"]
mlx = ["mlx-lm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fafsa", "llm"]
