[project]
name = "fafsa-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "requests",
    "tensor-logic @ file:../tensor-logic",
]

[project.optional-dependencies]
claude = ["anthropic"]
openai = ["openai"]
mlx = ["mlx-lm"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fafsa", "llm"]

[tool.pytest.ini_options]
cache_dir = ".local/pytest-cache"
